--- a/type-podcast-client/src/components/LevelCompleteModal/LevelCompleteModal.scss
+++ b/type-podcast-client/src/components/LevelCompleteModal/LevelCompleteModal.scss
@@ -2,7 +2,7 @@
 .modal-wrap { 
     display: none;
     position: fixed;
-    top: 0;
+    top: -9.375rem;
     left: 0;
     right: 0;
     bottom: 0;
@@ -19,8 +19,8 @@
         position: relative;
         z-index: 5;
         background-color: white;
-        width: 50%;
-        height: 100%;
+        width: 90%;
+        height: auto;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
